# xswl-signals

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.ps1  build.sh
cmake/: xswl-signals-config.cmake.in
doc/: API.md  API_EN.md  README.md  UPDATE_SUMMARY.md
examples/: CMakeLists.txt  basic.cpp  lifecycle.cpp
include/xswl/: signals.hpp
tests/: CMakeLists.txt  test_basic.cpp  test_common.hpp  test_concurrency.cpp  test_connections.cpp  test_edge_cases.cpp  test_main.cpp  test_performance.cpp  test_priority_member.cpp  test_signals_base.cpp  test_signals_strict.cpp
